--- a/QuanLyTour/Views/Home/Index.cshtml
+++ b/QuanLyTour/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
 
                                 <!-- Nút tìm kiếm -->
                                 <div class="col-xs-12 col-md-2" style="padding-left: 5px; margin-top: -10px;">
-                                    <button type="submit" class="btn btn-warning btn-lg" style="background-color: #ff8c00; border-color: #ff8c00; height: 46px; width: 100%; font-weight: bold;">TÌM</button>
+                                    <button type="submit" class="btn btn-warning btn-lg" style="background-color: #ff8c00; border-color: #ff8c00; height: 46px; width: 100%; font-weight: bold;">TÌM KIẾM</button>
                                 </div>
                             </form>
                         </div>
