--- a/QuanLyTour/Views/VeTau/Index.cshtml
+++ b/QuanLyTour/Views/VeTau/Index.cshtml
@@ -18,105 +18,226 @@
 
                     <div class="search-form-container" style="margin-top:20px">
                         <div class="row">
-                            <form id="search-form" action="@Url.Action("TimKiemTour", "Home")" method="get">
-                                <!-- Ô nhập địa điểm -->
-                                <div class="col-xs-12 col-md-4" style="padding-right: 5px; margin-bottom: 10px;">
-                                    <div class="input-group">
-                                        <span class="input-group-addon" style="background-color: white; border-right: none;"><i class="fa fa-map-marker"></i></span>
-                                        <input type="text" name="keyword" class="form-control input-lg" placeholder="Bạn muốn đi đâu?" style="height: 46px; border-left: none;" required>
-                                    </div>
+                            <form id="search-form" class="search-container">
+                                <div class="trip-type">
+                                    <label class="trip-option">
+                                        <input type="radio" name="trip-type" id="round-trip" checked>
+                                        <span class="radio-label">Khứ hồi</span>
+                                    </label>
+                                    <label class="trip-option">
+                                        <input type="radio" name="trip-type" id="one-way">
+                                        <span class="radio-label">Một chiều</span>
+                                    </label>
                                 </div>
 
-                                <!-- Ô chọn ngày -->
-                                <div class="col-xs-12 col-md-3" style="padding-right: 5px; padding-left: 5px; margin-bottom: 10px;">
-                                    <div class="input-group">
-                                        <span class="input-group-addon" style="background-color: white; border-right: none;"><i class="fa fa-calendar"></i></span>
-                                        <input type="date" class="form-control input-lg" placeholder="Ngày khởi hành" style="height: 46px; border-left: none;">
-                                    </div>
-                                </div>
+                                <div class="search-form">
+                                    <div class="form-row">
+                                        <div class="station-selector">
+                                            <div class="station-input">
+                                                <i class="fa fa-train"></i>
+                                                <div class="station-details">
+                                                    <div class="label">Ga đi</div>
+                                                    <select id="from-station" name="from-station" class="station-dropdown">
+                                                        <option value="SGO">Sài Gòn (SGO)</option>
+                                                        <option value="HNO">Hà Nội (HNO)</option>
+                                                        <option value="DNA">Đà Nẵng (DNA)</option>
+                                                        <option value="HUE">Huế (HUE)</option>
+                                                        <option value="NTR">Nha Trang (NTR)</option>
+                                                        <option value="PTH">Phan Thiết (PTH)</option>
+                                                        <option value="HPH">Hải Phòng (HPH)</option>
+                                                        <option value="DLT">Đà Lạt (DLT)</option>
+                                                        <option value="VTU">Vũng Tàu (VTU)</option>
+                                                        <option value="DHI">Đồng Hới (DHI)</option>
+                                                        <option value="LCA">Lào Cai (LCA)</option>
+                                                        <option value="TMT">Trại Mát (TMT)</option>
+                                                        <option value="HGI">Hà Giang (HGI)</option>
+                                                        <option value="VIN">Vinh (VIN)</option>
+                                                        <option value="BMT">Buôn Ma Thuột (BMT)</option>
+                                                    </select>
+                                                </div>
+                                            </div>
 
-                                <!-- Ô chọn nơi khởi hành -->
-                                <div class="col-xs-12 col-md-3" style="padding-right: 5px; padding-left: 5px; margin-bottom: 10px;">
-                                    <div class="input-group">
-                                        <span class="input-group-addon" style="background-color: white; border-right: none;"><i class="fa fa-plane"></i></span>
-                                        <select class="form-control input-lg" style="height: 46px; border-left: none;">
-                                            <option selected>Khởi hành từ</option>
-                                            <option>Hồ Chí Minh</option>
-                                            <option>Hà Nội</option>
-                                            <option>Đà Nẵng</option>
-                                        </select>
-                                    </div>
-                                </div>
+                                            <div id="swap-stations" class="swap-button">
+                                                <i class="fa fa-exchange"></i>
+                                            </div>
 
-                                <!-- Nút tìm kiếm -->
-                                <div class="col-xs-12 col-md-2" style="padding-left: 5px; margin-top: -10px;">
-                                    <button type="submit" class="btn btn-warning btn-lg" style="background-color: #ff8c00; border-color: #ff8c00; height: 46px; width: 100%; font-weight: bold;">TÌM</button>
+                                            <div class="station-input">
+                                                <i class="fa fa-train"></i>
+                                                <div class="station-details">
+                                                    <div class="label">Ga đến</div>
+                                                    <select id="to-station" name="to-station" class="station-dropdown">
+                                                        <option value="PTH">Phan Thiết (PTH)</option>
+                                                        <option value="SGO">Sài Gòn (SGO)</option>
+                                                        <option value="HNO">Hà Nội (HNO)</option>
+                                                        <option value="DNA">Đà Nẵng (DNA)</option>
+                                                        <option value="HUE">Huế (HUE)</option>
+                                                        <option value="NTR">Nha Trang (NTR)</option>
+                                                        <option value="HPH">Hải Phòng (HPH)</option>
+                                                        <option value="DLT">Đà Lạt (DLT)</option>
+                                                        <option value="VTU">Vũng Tàu (VTU)</option>
+                                                        <option value="DHI">Đồng Hới (DHI)</option>
+                                                        <option value="LCA">Lào Cai (LCA)</option>
+                                                        <option value="TMT">Trại Mát (TMT)</option>
+                                                        <option value="HGI">Hà Giang (HGI)</option>
+                                                        <option value="VIN">Vinh (VIN)</option>
+                                                        <option value="BMT">Buôn Ma Thuột (BMT)</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="ticket-quantity">
+                                            <i class="fa fa-user"></i>
+                                            <div class="quantity-details">
+                                                <div class="label">Số lượng vé</div>
+                                                <div class="quantity-control">
+                                                    <button type="button" id="decrease-tickets" class="quantity-btn">-</button>
+                                                    <span id="ticket-count-display" class="quantity">1 vé</span>
+                                                    <button type="button" id="increase-tickets" class="quantity-btn">+</button>
+                                                    <input type="hidden" id="ticket-count" name="ticket-count" value="1">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-row">
+                                        <div class="date-picker">
+                                            <div class="date-details">
+                                                <label for="depart-date" class="form-label">Ngày đi</label>
+                                                <input type="date" id="depart-date" name="depart-date" class="form-control">
+                                            </div>
+                                        </div>
+                                    
+                                        <div id="return-date-container" class="date-picker">
+                                            <div class="date-details">
+                                                <label for="return-date" class="form-label">Ngày về</label>
+                                                <input type="date" id="return-date" name="return-date" class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <button type="submit" class="search-button">TÌM KIẾM</button>
+                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div><!-- end row -->
     </div><!-- end container -->
 </div><!-- end search-tabs -->
-<section class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-heading white-heading">
-                    <h2 style="color:black;">DANH MỤC VÉ TÀU</h2>
-                    <hr class="heading-line" />
-                </div><!-- end page-heading -->
-                @if (Model != null && Model.ToursTrongNuoc.Any())
-                {
-                    <div class="owl-carousel owl-theme owl-custom-arrow" id="owl-hotel-offers">
-                        @foreach (var tour in Model.ToursTrongNuoc)
-                        {
-                            <div class="item">
-                                <div class="tour-card">
-                                    <div class="tour-img-container">
-                                        <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">
-                                            <img src="@Url.Content($"~/hinhanh/{tour.HinhAnh1}")" class="img-responsive" alt="@tour.TenTour" />
-                                        </a>
-                                    </div>
-                                    <div class="tour-info">
-                                        <h4>
-                                            <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
-                                        </h4>
-                                        <div class="tour-duration-container">
-                                            <div class="tour-duration">
-                                                <span><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-                                                <div>@($"{tour.SoNgay}")</div>
-                                            </div>
-                                            <div class="transportation-icons">
-                                                <i class="fa fa-plane" aria-hidden="true"></i>
-                                                <i class="fa fa-bus" aria-hidden="true"></i>
-                                                <i class="fa fa-train" aria-hidden="true"></i>
-                                            </div>
-                                        </div>
-                                        <div class="tour-highlights">
-                                            <div>@($"Điểm đến: {tour.DiaDiem}")</div>
-                                        </div>
-                                        <div class="tour-price">
-                                            <div>@tour.GiaTour.ToString("#,##0") VNĐ</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                    </div>
-                }
-                else
-                {
-                    <p class="text-center danger">Không có tour mới nào để hiển thị.</p>
-                }
 
-                <div class="view-all text-center">
-                    <a href="@Url.Action("DanhMucTour","Tour")" class="btn btn-orange">Xem nhiều hơn</a>
-                </div><!-- end view-all -->
-            </div><!-- end columns -->
-        </div><!-- end row -->
-    </div><!-- end container -->
-</section><!-- end hotel-offers -->
+<!-- Phần hiển thị danh sách vé tàu -->
+<section class="ticket-list-section">
+    <div class="container">
+        <div class="page-heading white-heading">
+            <h2 style="color:black;">DANH MỤC VÉ TÀU</h2>
+            <hr class="heading-line" />
+        </div><!-- end page-heading -->
+        <div class="ticket-grid">
+            <!-- Hàng 1 -->
+            <div class="ticket-card">
+                <div class="route">
+                    <div class="origin">Sài Gòn</div>
+                    <div class="trip-info">
+                        <div class="time">8h20p</div>
+                        <div class="train-code">SNT2</div>
+                    </div>
+                    <div class="destination">Nha Trang</div>
+                </div>
+                <div class="ticket-group">
+                    <div class="price">385.000<span>VNĐ</span></div>
+                    <button class="view-button">Xem</button>
+                </div>
+            </div>
+            <div class="ticket-card">
+                <div class="route">
+                    <div class="origin">Sài Gòn</div>
+                    <div class="trip-info">
+                        <div class="time">8h20p</div>
+                        <div class="train-code">SNT2</div>
+                    </div>
+                    <div class="destination">Nha Trang</div>
+                </div>
+                <div class="ticket-group">
+                    <div class="price">385.000<span>VNĐ</span></div>
+                    <button class="view-button">Xem</button>
+                </div>
+            </div>
+            <div class="ticket-card">
+                <div class="route">
+                    <div class="origin">Sài Gòn</div>
+                    <div class="trip-info">
+                        <div class="time">8h20p</div>
+                        <div class="train-code">SNT2</div>
+                    </div>
+                    <div class="destination">Nha Trang</div>
+                </div>
+                <div class="ticket-group">
+                    <div class="price">385.000<span>VNĐ</span></div>
+                    <button class="view-button">Xem</button>
+                </div>
+            </div>
+        </div>
+    </div>
+     <div class="view-all text-center">
+        <a href="@Url.Action("DanhMucTour","Tour")" class="btn btn-orange">Xem nhiều hơn</a>
+     </div><!-- end view-all -->
+</section>
+
+<!-- JavaScript for station swapping functionality -->
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Swap stations functionality
+        const swapButton = document.getElementById('swap-stations');
+        const fromStation = document.getElementById('from-station');
+        const toStation = document.getElementById('to-station');
+        
+        swapButton.addEventListener('click', function() {
+            const tempValue = fromStation.value;
+            fromStation.value = toStation.value;
+            toStation.value = tempValue;
+        });
+        
+        // Show/hide return date based on trip type
+        const roundTrip = document.getElementById('round-trip');
+        const oneWay = document.getElementById('one-way');
+        const returnDateContainer = document.getElementById('return-date-container');
+        
+        roundTrip.addEventListener('change', function() {
+            if(this.checked) {
+                returnDateContainer.style.display = 'block';
+            }
+        });
+        
+        oneWay.addEventListener('change', function() {
+            if(this.checked) {
+                returnDateContainer.style.display = 'none';
+            }
+        });
+        
+        // Ticket quantity control
+        const decreaseBtn = document.getElementById('decrease-tickets');
+        const increaseBtn = document.getElementById('increase-tickets');
+        const ticketCount = document.getElementById('ticket-count');
+        const ticketCountDisplay = document.getElementById('ticket-count-display');
+        
+        decreaseBtn.addEventListener('click', function() {
+            let count = parseInt(ticketCount.value);
+            if(count > 1) {
+                count--;
+                ticketCount.value = count;
+                ticketCountDisplay.textContent = count + ' vé';
+            }
+        });
+        
+        increaseBtn.addEventListener('click', function() {
+            let count = parseInt(ticketCount.value);
+            if(count < 10) {
+                count++;
+                ticketCount.value = count;
+                ticketCountDisplay.textContent = count + ' vé';
+            }
+        });
+    });
+</script>
