--- a/QuanLyTour/Views/VeTau/Index.cshtml
+++ b/QuanLyTour/Views/VeTau/Index.cshtml
@@ -127,6 +127,15 @@
     </div><!-- end container -->
 </div><!-- end search-tabs -->
 
+<!-- Phần hiển thị bản đồ ga tàu -->
+<div class="map-train">
+    <div class="page-heading white-heading">
+        <h2 style="color:black;">BẢN ĐỒ TUYẾN ĐƯỜNG SẮT VIỆT NAM</h2>
+        <hr class="heading-line" />
+    </div><!-- end page-heading -->
+    <img src="~/images/ban_do.png" alt="Ban do ga tau" class="w-full h-full">
+</div>
+
 <!-- Phần hiển thị danh sách vé tàu -->
 <section class="ticket-list-section">
     <div class="container">
@@ -141,6 +150,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
+                        <div><i class="fa fa-arrow-right"></i></div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
@@ -155,6 +165,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
+                        <div><i class="fa fa-arrow-right"></i></div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
@@ -169,6 +180,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
+                        <div><i class="fa fa-arrow-right"></i></div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
@@ -180,9 +192,6 @@
             </div>
         </div>
     </div>
-     <div class="view-all text-center">
-        <a href="@Url.Action("DanhMucTour","Tour")" class="btn btn-orange">Xem nhiều hơn</a>
-     </div><!-- end view-all -->
 </section>
 
 <!-- JavaScript for station swapping functionality -->
