--- a/QuanLyTour/wwwroot/css/style.css
+++ b/QuanLyTour/wwwroot/css/style.css
@@ -3711,6 +3711,7 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 
 /* Phần hiển thị danh sách vé tàu */
 .ticket-list-section {
+	margin-top: 50px;
 	padding-bottom: 124px;
 }
 
@@ -3728,6 +3729,11 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 	display: flex;
 	flex-direction: column;
 }
+
+	.ticket-card:hover {
+		transition: box-shadow .5s ease-in-out;
+		box-shadow: 2px 4px 6px 2px #0003, 0 2px 4px -1px #0003 !important;
+	}
 
 .ticket-group{
 	display: flex;
@@ -3760,8 +3766,6 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 .train-code {
 	color: #666;
 	font-size: 12px;
-	border-top: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
 	padding: 2px 0;
 	margin-top: 2px;
 }
@@ -3859,3 +3863,22 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 .flatpickr-input {
     cursor: pointer;
 }
+
+.map-train {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0 50px;
+	margin: 20px auto;
+}
+
+	.map-train .page-heading {
+		width: 100%;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.map-train img {
+		max-width: 100%;
+		height: auto;
+	}
