--- a/QuanLyTour/Views/VeTau/Index.cshtml
+++ b/QuanLyTour/Views/VeTau/Index.cshtml
@@ -149,7 +149,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
-                        <div><i class="fa fa-arrow-right"></i></div>
+                        <div class="arrow">→</div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
@@ -164,7 +164,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
-                        <div><i class="fa fa-arrow-right"></i></div>
+                        <div class="arrow">→</div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
@@ -179,7 +179,7 @@
                     <div class="origin">Sài Gòn</div>
                     <div class="trip-info">
                         <div class="time">8h20p</div>
-                        <div><i class="fa fa-arrow-right"></i></div>
+                        <div class="arrow">→</div>
                         <div class="train-code">SNT2</div>
                     </div>
                     <div class="destination">Nha Trang</div>
