--- a/QuanLyTour/Views/Home/HoTro.cshtml
+++ b/QuanLyTour/Views/Home/HoTro.cshtml
@@ -46,26 +46,26 @@
                                 <!-- Liên hệ -->
                                 <div id="lienhe" class="tab-pane fade">
                                     <h3>Liên Hệ</h3>
-                                    @using (Html.BeginForm("SendSupportMessage", "Home", FormMethod.Post))
+
+                                    @if (TempData["Success"] != null)
                                     {
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Họ và tên" required name="fullname" />
-                                            <span><i class="fa fa-user"></i></span>
-                                        </div>
+                                        <div class="alert alert-success">@TempData["Success"]</div>
+                                    }
+                                    @if (TempData["Error"] != null)
+                                    {
+                                        <div class="alert alert-danger">@TempData["Error"]</div>
+                                    }
 
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" placeholder="Email của bạn" required name="email" />
-                                            <span><i class="fa fa-envelope"></i></span>
-                                        </div>
-
+                                    @using (Html.BeginForm("Support", "Home", FormMethod.Post))
+                                    {
                                         <div class="form-group">
                                             <textarea class="form-control" placeholder="Nhập nội dung hỗ trợ" required name="message"></textarea>
                                             <span><i class="fa fa-comment"></i></span>
                                         </div>
-
                                         <button class="btn btn-orange btn-block">Gửi hỗ trợ</button>
                                     }
                                 </div>
+
 
                                 <!-- Hướng dẫn sử dụng -->
                                 <div id="huongdan" class="tab-pane fade">
