--- a/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
+++ b/QuanLyTour/Views/Shared/_LayoutAdmin.cshtml
@@ -135,7 +135,13 @@
                                 <i class="fa fa-cogs"></i>
                                 <span>Quản lý hóa đơn</span>
                             </a>
-                        </li>                       
+                        </li>
+                    <li class="sub-menu">
+                        <a href="@Url.Action("HoTroView","Admin")">
+                            <i class="fa fa-cogs"></i>
+                            <span>Hỗ trợ người dùng</span>
+                        </a>
+                    </li>
                     </ul>
                     <!-- sidebar menu end-->
             </div>
