--- a/QuanLyTour/Views/Admin/HoTroView.cshtml
+++ b/QuanLyTour/Views/Admin/HoTroView.cshtml
@@ -17,10 +17,10 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Mã Hỗ Trợ</th>
-                            <th>Tên Người Dùng</th>
+                            <th style="width: 10%;">Mã Hỗ Trợ</th>
+                            <th style="width: 30%;">Tên Người Dùng</th>
                             <th>Nội Dung</th>
-                            <th>Ngày Gửi</th>
+                            <th style="width: 20%;">Ngày Gửi</th>
                         </tr>
                     </thead>
                     <tbody>
