--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -187,7 +187,7 @@
         <script src="~/js/custom-owl.js"></script>
         <script src="~/js/custom-date-picker.js"></script>
         <script src="~/js/custom-gallery.js"></script>
-
+        @RenderSection("scripts", required: false)      
         <!-- Page Scripts Ends -->
 </body>
 </html>
