--- a/QuanLyTour/Views/VeTau/Index.cshtml
+++ b/QuanLyTour/Views/VeTau/Index.cshtml
@@ -193,7 +193,7 @@
     </div>
 </section>
 
-@* <!-- JavaScript for station swapping functionality -->
+<!-- JavaScript for station swapping functionality -->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Swap stations functionality
@@ -248,4 +248,4 @@
             }
         });
     });
-</script> *@
+</script>
