--- a/QuanLyTour/Views/Shared/_Detail.cshtml
+++ b/QuanLyTour/Views/Shared/_Detail.cshtml
@@ -177,7 +177,7 @@
     <script src="~/js/slick.min.js"></script>
     <script src="~/js/custom-date-picker.js"></script>
     <script src="~/js/custom-slick.js"></script>
-
+    @RenderSection("scripts", required: false)
     <!-- Page Scripts Ends -->
     <!-- Page Scripts Ends -->
 </body>
